big meaningless commit

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,15 +1,15 @@
 @use "../styles.scss" as *;
 
-.app-container {
-  @extend %flex-col;
-  row-gap: 20px;
-}
+// .app-container {
+//   @extend %flex-col;
+//   row-gap: 20px;
+// }
 
 .nav-container {
   @extend %flex-row;
-  @extend %secondary-background;
+
   width: 100%;
-  justify-content: end;
+  //   justify-content: end;
 
   div {
     @extend %flex-row;
@@ -18,15 +18,16 @@
   }
 
   a {
-    @extend %clicked-link-behavior;
+    text-decoration: none;
+    color: black;
     font-size: large;
     border-right: solid;
-    padding-right: 2px;
+    padding-right: 1rem;
   }
 }
 
-.logout-hover:hover {
-  @extend %alert-background;
-  border: 2px solid transparent;
-  color: white;
-}
+// .logout-hover:hover {
+//   @extend %alert-background;
+//   border: 2px solid transparent;
+//   color: white;
+// }
