--- a/src/app/modules/home/home.scss
+++ b/src/app/modules/home/home.scss
@@ -1,49 +1,49 @@
-@use "../../../styles.scss" as *;
+// @use "../../../styles.scss" as *;
 
-.home-container {
-  @extend %flex-col;
+// .home-container {
+//   @extend %flex-col;
 
-  height: 80vh;
-  row-gap: 2rem;
-  .form-container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    // background-color: blue;
-  }
-}
+//   height: 80vh;
+//   row-gap: 2rem;
+//   .form-container {
+//     display: flex;
+//     justify-content: center;
+//     width: 100%;
+//     // background-color: blue;
+//   }
+// }
 
-.comment-container {
-  // @extend %flex-row;
-  // display: flex;
-  // justify-content: center;
-  height: 100%;
-  overflow-y: auto;
-  margin-top: 2rem;
-  // background-color: yellow;
-  width: 35rem;
-  translate: -30px 0;
-  .inner-div {
-    height: 100%;
-    @extend %flex-row;
-    column-gap: 1rem;
-    width: 100%;
-    overflow-x: auto;
-    // background-color: red;
-  }
-}
+// .comment-container {
+//   // @extend %flex-row;
+//   // display: flex;
+//   // justify-content: center;
+//   height: 100%;
+//   overflow-y: auto;
+//   margin-top: 2rem;
+//   // background-color: yellow;
+//   width: 35rem;
+//   translate: -30px 0;
+//   .inner-div {
+//     height: 100%;
+//     @extend %flex-row;
+//     column-gap: 1rem;
+//     width: 100%;
+//     overflow-x: auto;
+//     // background-color: red;
+//   }
+// }
 
-.goulash {
-  display: flex;
-  justify-content: center;
-  // background-color: green;
-  width: 100%;
-}
+// .goulash {
+//   display: flex;
+//   justify-content: center;
+//   // background-color: green;
+//   width: 100%;
+// }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-  .comment-container {
-    width: 35rem;
-    translate: -60px 0;
-  }
-}
+// /* Small devices (portrait tablets and large phones, 600px and up) */
+// @media only screen and (min-width: 600px) {
+//   .comment-container {
+//     width: 35rem;
+//     translate: -60px 0;
+//   }
+// }
