--- a/src/app/modules/newword/newword/newword.html
+++ b/src/app/modules/newword/newword/newword.html
@@ -1,125 +1,146 @@
-<div class="big">
-  <div class="lessBig">
-    <form
-      class="topForm"
-      [formGroup]="manualForm"
-      (ngSubmit)="submitManualWord()"
-    >
-      <div class="wik">
-        <app-wiktion />
-      </div>
-      <span> Manual Entry:</span>
-      <label for="original"
-        >Original:
-        <input
-          autocomplete="off"
-          id="original"
-          type="text"
-          formControlName="original"
-        />
-      </label>
-      <label for="translation"
-        >Translation:
-        <input
-          autocomplete="off"
-          id="translation"
-          type="text"
-          formControlName="translation"
-        />
-      </label>
-      <label for="partOfSpeech">Part of Speech:</label>
+ <mat-dialog-content>
+<section class="outer">
+<form [formGroup]="manualForm" (ngSubmit)="submitManualWord()" class="new-word-form">
 
-      <select
-        name="partOfSpeech"
-        id="partOfSpeech"
-        formControlName="partOfSpeech"
-        (change)="caseButtonHide($event)"
-      >
-        <option value="Verb">Verb</option>
-        <option value="Adjective">Adjective</option>
-        <option value="Noun">Noun</option>
-        <option value="Other">Other</option>
-      </select>
-      <div>
-        <label
-          ><button
-            [hidden]="this.isCaseButtonHidden"
-            (click)="toggleCase()"
-            type="submit"
-          >
-            Case
-          </button></label
-        >
-      </div>
-    </form>
-
-    <div [style.display]="isCaseHidden ? 'none' : 'block'">
-      @switch (this.word.partOfSpeech) { @case ("Verb") {
-      <app-imperfect (sendUp)="onSendUp($event)" />
-
-      } @case ("Noun") {
-      <app-noun (sendUp)="onSendUp($event)" />
-
-      } @case ("Adjective") {
-      <app-adjective (sendUp)="onSendUp($event)" />
-      } @default {
-      <p></p>
-      }}
-    </div>
-
-    <div>
-      <p><strong>translations:</strong></p>
-      @for (item of this.definitions(); track $index) {
-      <li>{{ item }}</li>
-      } @empty {
-      <li>(no translations)</li>
-      }
-      <p><strong>examples:</strong></p>
-      @for (item of this.examples(); track $index) {
-      <li>{{ item }}</li>
-      } @empty {
-      <li>(no examples)</li>
-      }
-    </div>
-
-    <form
-      class="topForm"
-      [formGroup]="addDefinition"
-      (ngSubmit)="submitDefinition()"
-    >
-      <label for="definition"
-        >Definition:
-        <textarea
-          autocomplete="off"
-          id="definition"
-          type="text"
-          formControlName="definition"
-        >
-        </textarea>
-      </label>
-      <div>
-        <label><button type="submit">Add definition</button></label>
-        <label
-          ><button (click)="definitionEdit($event)">Edit last</button></label
-        >
-      </div>
-    </form>
-    <form class="topForm" [formGroup]="addExample" (ngSubmit)="submitExample()">
-      <label for="example"
-        >Example:
-        <textarea
-          autocomplete="off"
-          id="example"
-          type="text"
-          formControlName="example"
-        ></textarea>
-      </label>
-      <div>
-        <label><button type="submit">Add example</button></label>
-        <label><button (click)="exampleEdit($event)">Edit last</button></label>
-      </div>
-      <button (click)="seeWord($event)">save word</button>
-      <button (click)="reset($event)">reset</button>
-    </form>
-  </div>
+<div class="wiktion-div">
+  <app-wiktion />
 </div>
+
+  <mat-form-field>
+    <mat-label for="original">Original</mat-label>
+    <input
+      autocomplete="off"
+      id="original"
+      type="text"
+      formControlName="original"
+      matInput
+    />
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label for="translation">Translation</mat-label>
+    <input
+      autocomplete="off"
+      id="translation"
+      type="text"
+      formControlName="translation"
+      matInput
+    />
+  </mat-form-field>
+<div class="speech-row">
+  <mat-form-field class="speech-row__field">
+    <mat-label for="partOfSpeech">Part of Speech</mat-label>
+
+    <mat-select
+      name="partOfSpeech"
+      id="partOfSpeech"
+      formControlName="partOfSpeech"
+      (change)="caseButtonHide($event)"
+    >
+      <mat-option value="Verb">Verb</mat-option>
+      <mat-option value="Adjective">Adjective</mat-option>
+      <mat-option value="Noun">Noun</mat-option>
+      <mat-option value="Other">Other</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+      <button
+        [hidden]="this.isCaseButtonHidden"
+        (click)="toggleCase()"
+        type="submit"
+        matButton="tonal"
+        class="speech-row__case-button"
+      >
+        Case
+      </button>
+    </div>
+</form>
+
+<div [style.display]="isCaseHidden ? 'none' : 'block'">
+  @switch (this.word.partOfSpeech) { @case ("Verb") {
+  <app-edit-imperfect [sendDown]="this.word.case" (sendUp)="onSendUp($event)" />
+
+  } @case ("Noun") {
+  <app-edit-noun [sendDown]="this.word.case" (sendUp)="onSendUp($event)" />
+
+  } @case ("Adjective") {
+  <app-edit-adjective [sendDown]="this.word.case"  (sendUp)="onSendUp($event)" />
+  } @default {
+  <p></p>
+  }}
+</div>
+
+<div class="translations-examples-container">
+  <p><strong>translations:</strong></p>
+  @for (item of this.definitions(); track $index) {
+  <li>{{ item }}</li>
+  } @empty {
+  <li>(no translations)</li>
+  }
+  <p><strong>examples:</strong></p>
+  @for (item of this.examples(); track $index) {
+  <li>{{ item }}</li>
+  } @empty {
+  <li>(no examples)</li>
+  }
+</div>
+
+<form
+  [formGroup]="addDefinition"
+  (ngSubmit)="submitDefinition()"
+  
+>
+  <mat-form-field  class="definition-example">
+    <mat-label for="definition">New Definition</mat-label>
+    <textarea
+      autocomplete="off"
+      id="definition"
+      type="text"
+      formControlName="definition"
+      matInput
+    >
+    </textarea>
+      <div class="definition-example--buttons">
+    <label><button type="submit" matButton>Add</button></label>
+    <label><button (click)="definitionEdit($event)" matButton>Edit last</button></label>
+  </div>
+  </mat-form-field>
+
+</form>
+
+<form [formGroup]="addExample" (ngSubmit)="submitExample()" >
+  <mat-form-field class="definition-example">
+    <mat-label for="example">New Example</mat-label>
+    <textarea
+      autocomplete="off"
+      id="example"
+      type="text"
+      formControlName="example"
+      matInput
+    ></textarea>
+      <div class="definition-example--buttons">
+    <label
+      ><button type="submit" matButton=>Add</button></label
+    >
+    <label
+      ><button (click)="exampleEdit($event)" matButton=>
+        Edit last
+      </button></label
+    >
+  </div>
+  </mat-form-field>
+
+  <div class="save-button-row">
+    @if (this.data) 
+    {
+      <button (click)="patchWord($event)" matButton="filled">Edit word</button>
+    } 
+    @else {
+      <button (click)="seeWord($event)" matButton="filled">Save word</button>
+      }
+  
+  <button (click)="reset($event)" matButton="elevated">Reset</button>
+  </div>
+  </form>
+</section>
+</mat-dialog-content> 
