--- a/src/app/shared/components/edit-adjective/edit-adjective.scss
+++ b/src/app/shared/components/edit-adjective/edit-adjective.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  margin-bottom: 1rem;
 }
 @media only screen and (max-width: 600px) {
   .big {
