--- a/src/app/shared/components/definition-edit/definition-edit.html
+++ b/src/app/shared/components/definition-edit/definition-edit.html
@@ -1,8 +1,9 @@
-<form [formGroup]="dynamicForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="dynamicForm" (focusout)="toEdit($event)" #definitionEdit>
+  <!-- <form [formGroup]="dynamicForm" (ngSubmit)="onSubmit()"> -->
   <div formArrayName="formArray">
     @for (group of formArray.controls; track group; let index = $index) {
-    <div [formGroupName]="index" class="form-group">
-      <mat-form-field appearance="outline">
+    <div [formGroupName]="index">
+      <mat-form-field appearance="outline" class="field">
         <input matInput placeholder="definition" formControlName="definition" />
       </mat-form-field>
       <button mat-icon-button color="warn" (click)="removeFormGroup(index)">
@@ -12,10 +13,10 @@
     }
   </div>
   <button mat-raised-button color="primary" (click)="addFormGroup()">
-    Add Another
+    Add Definition
   </button>
-  <button mat-raised-button color="primary" (click)="toEdit($event)">
-    to edit
-  </button>
+  <!-- <button mat-raised-button color="primary" (click)="toEdit($event)">
+    Confirm
+  </button> -->
   <!-- <button mat-raised-button color="accent" type="submit">Submit</button> -->
 </form>
