--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,35 +1,2 @@
-<section class="app-container">
-  <header class="nav-container">
-    <div>
-      <a routerLink="/newword">new word </a>
-      <a routerLink="/quiz">quiz </a>
-    </div>
-    <!-- <a routerLink="/login">
-        @if(computedNameSignal()) {
-        <span>{{ computedNameSignal() + this.suffix }} profile</span>
-
-        } @else {profile}
-      </a>
-      @if (computedNameSignal()) {
-      <button class="logout-hover" (click)="logoutUser()">Logout</button>
-      }
-      <a routerLink="/home"> Home </a>
-    </div> -->
-  </header>
-
-  <router-outlet></router-outlet>
-</section>
-
-<!-- <a href="#">
-      <span class="sr-only">Home</span>
-      <svg
-        version="1.1"
-        baseProfile="full"
-        width="100"
-        height="75"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <rect width="100%" height="100%" fill="rgb(17 24 39)" />
-        <circle cx="25" cy="37" r="20" fill="currentColor" />
-      </svg>
-    </a> -->
+<router-outlet></router-outlet>
+<app-loading-indicator [detectRouteTransitions]="true" />
